# VisualTac_ros2

./: .gitignore  README.md  calibrate_matrix.sh  env_loader.sh  requirements_ros2.txt  start_all.sh  start_calibration.sh  start_config.json  start_host.sh
ros2_ws/src/gelwedge_demo_ros2/: package.xml  setup.cfg  setup.py
ros2_ws/src/gelwedge_demo_ros2/gelwedge_demo_ros2/: Test.py  gelwedge_demo_node.py  setting.py  transformation_matrix.npy  transformation_matrix_calculation.py  utilities_demo.py
ros2_ws/src/gelwedge_demo_ros2/gelwedge_demo_ros2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ros2_ws/src/gelwedge_demo_ros2/launch/: calibrate.launch.py  demo.launch.py
