<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gelwedge_demo_ros2</name>
  <version>0.0.1</version>
  <description>ROS 2 GelWedge visual-tactile sensing demo package.</description>

  <maintainer email="duchengjin@cvte.com">Chengjin Du</maintainer>
  <license>MIT</license>

  <!-- ===== Core build tools ===== -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ===== ROS 2 runtime dependencies ===== -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- ===== Python-level runtime dependencies ===== -->
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>numpy</exec_depend>

  <!-- ===== Optional test tools ===== -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- ===== Export build type ===== -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
